# IR_Internship

./: .gitignore  Makefile  docker-compose.yml  pyproject.toml  readme.md
src/: config.py  constants.py  elastic_search.py  main.py  parser.py  utils.py
src/analysis/: synonyms.txt
src/bert/: dataset.py  model.py  trainer.py
src/eval/: evaluate.py  relevance_calculator.py  tech_categories.py
