[project]
name = "parser-csit"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Babaev",email = "maximrossa1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.12,<4.0.0)",
    "elasticsearch (>=8.17.1,<9.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

