[project]
name = "parser-csit"
version = "0.1.0"
description = ""
authors = [
    {name = "Nikita Babaev",email = "maximrossa1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp (>=3.11.12,<4.0.0)",
    "elasticsearch (>=8.17.1,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "transformers (>=4.51.1,<5.0.0)",
    "torch (>=2.6.0,<3.0.0)",

]


[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu126"
priority = "explicit"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"
scikit-learn = "^1.6.1"

[tool.poetry.group.pytorch-gpu.dependencies]
torch = {version = "^2.6.0", source = "pytorch-gpu"}

